# rusdox

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  SECURITY.md  rusdox.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  template_request.yml
.github/workflows/: release.yml  rust.yml
docs/: cli.md  gallery.md  github-setup.md  rust-api.md  yaml-guide.md
examples/: README.md  formatting_showcase.yaml  meeting_notes.yaml  product_launch_brief.yaml  project_brief.yaml  table_report.yaml  visual_assets_showcase.yaml  yaml_composition_showcase.yaml
examples/stress/: stress_1000_pages.yaml
scripts/: generate_gallery_assets.sh  generate_stress_yaml.sh  install.ps1  install.sh  run_stress_yaml.sh
site/: CONTRIBUTING.md  INTEGRATION.md  README.md  SUPPORT.md  app.js  docs.html  index.html  styles.css
site/docs/: README.md  cli.md  configuration.md  getting-started.md  rust-api.md  yaml-guide.md
site/examples/: README.md  board_report.yaml  client_proposal.yaml  configured_studio.yaml  executive_dashboard.yaml  hello_world.yaml  invoice.yaml  named_styles_showcase.yaml  talent_profile.yaml  visual_assets_showcase.yaml
site/examples/fragments/: yaml_composition_summary.yaml
src/: config.rs  document.rs  error.rs  layout.rs  lib.rs  metadata.rs  paragraph.rs  run.rs  spec.rs  spec_expand.rs  studio.rs  style.rs  table.rs  validate.rs  visual.rs  xml_utils.rs
tests/: cli.rs  integration.rs
tests/fixtures/: README.md
